# SIC-XE-ASSEMBLER

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  railpack.json  railway.toml
assembler-ui/: index.html  package-lock.json  package.json  tailwind.config.js
assembler-ui/src/: App.tsx  index.css  main.tsx  types.ts
assembler-ui/src/components/: Button.tsx  Card.tsx  CustomCursor.tsx  Layout.tsx  ScanlineEffect.tsx  TypingEffect.tsx
assembler-ui/src/components/assembler/: CodeEditor.tsx  ErrorBanner.tsx  LoadingCoin.tsx  OutputPanel.tsx  OutputTabs.tsx
assembler-ui/src/components/auth/: LoginPage.tsx  RegisterPage.tsx
assembler-ui/src/components/background/: CRTOverlay.tsx  StarField.tsx
assembler-ui/src/components/cursor/: PixelCursor.tsx
assembler-ui/src/components/history/: HistoryCard.tsx  HistoryGrid.tsx
assembler-ui/src/components/layout/: LeftNavbar.tsx  PixelDivider.tsx
assembler-ui/src/components/profile/: ProfilePage.tsx
assembler-ui/src/hooks/: useAssembler.ts  useAuth.ts
assembler-ui/src/lib/: api.ts  auth.ts
assembler-ui/src/pages/: Assembler.tsx  Login.tsx  Register.tsx
docker/: Dockerfile  Dockerfile.assembler  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf
docs/: ASSEMBLER.md  BACKEND.md  FRONTEND.md
inputs/: in.txt  test1.txt  test2.txt  test3.txt
migrations/: 001_create_users.sql  002_create_assembly_jobs.sql  003_rename_email_to_username.sql  004_add_oauth_token.sql
outputs/: intermediate.txt  litTable.txt  object_program.txt  out_pass1.txt  symbTable.txt
src/: auth.rs  conversions.rs  error.rs  in.txt  intermediate.txt  lib.rs  litTable.txt  main.rs  models.rs  out_pass1.txt  pass1.rs  pass2.rs  sicprogram.txt  symbTable.txt
src/handlers/: assembly.rs  auth.rs  mod.rs
