[package]
name = "systems_project"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "systems_project"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
name = "systems_project"
path = "src/lib.rs"

[dependencies]
itertools = "0.10"
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
oauth2 = "4.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
