[package]
name = "systems_project"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"

[[bin]]
name = "systems_project"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
name = "systems_project"
path = "src/lib.rs"

[dependencies]
itertools = "0.10"
actix-web = "4.4"
actix-cors = "0.6"
actix-governor = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
oauth2 = { version = "5.0", features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.5", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }